[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.9",
    "anthropic>=0.52.2",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "memvid>=0.1.3",
    "openai>=1.84.0",
    "pypdf>=5.6.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]
